# FridgeManagement

./: .gitignore  Doxyfile  LICENSE  README.md  _core_database_connector_8cpp.html  _core_database_connector_8h.html  _core_database_connector_8h_source.html  _integer_parameter_8cpp.html  _integer_parameter_8h.html  _integer_parameter_8h_source.html  _my_sql_exception_8cpp.html  _my_sql_exception_8h.html  _my_sql_exception_8h.js  _my_sql_exception_8h_source.html  _parameter_base_8cpp.html  _parameter_base_8h.html  _parameter_base_8h_source.html  _string_parameter_8cpp.html  _string_parameter_8h.html  _string_parameter_8h_source.html  _tools_8h.html  _tools_8h_source.html  _z_z_z___template_8cpp.html  _z_z_z___template_8h.html  _z_z_z___template_8h_source.html  annotated.html  annotated_dup.js  classcom_1_1sebastianwinter_1_1fridge__management_1_1core__data__base__connector_1_1_core_database_connector-members.html  classcom_1_1sebastianwinter_1_1fridge__management_1_1core__data__base__connector_1_1_core_database_connector.html  classcom_1_1sebastianwinter_1_1fridge__management_1_1core__data__base__connector_1_1_core_database_connector.js  classcom_1_1sebastianwinter_1_1fridge__management_1_1core__data__base__connector_1_1_my_sql_exception-members.html  classcom_1_1sebastianwinter_1_1fridge__management_1_1core__data__base__connector_1_1_my_sql_exception.html  classcom_1_1sebastianwinter_1_1fridge__management_1_1core__data__base__connector_1_1_my_sql_exception.js  classcom_1_1sebastianwinter_1_1fridge__management_1_1core__data__base__connector_1_1_template_class-members.html  classcom_1_1sebastianwinter_1_1fridge__management_1_1core__data__base__connector_1_1_template_class.html  classcom_1_1sebastianwinter_1_1fridge__management_1_1core__data__base__connector_1_1_template_class.js  classcom_1_1sebastianwinter_1_1fridge__management_1_1core__data__base__connector_1_1_tools-members.html  classcom_1_1sebastianwinter_1_1fridge__management_1_1core__data__base__connector_1_1_tools.html  classcom_1_1sebastianwinter_1_1fridge__management_1_1core__data__base__connector_1_1_tools.js  classcom_1_1sebastianwinter_1_1fridge__management_1_1core__data__base__connector_1_1history__itec737a4a466690e222e4910eddddc2077.html  (+82 more)
software/shared/: .clang-format  CMakeLists.txt  CoreDatabaseConnector.cpp  CoreDatabaseConnector.h  MySqlException.cpp  MySqlException.h  Tools.h
(+134 files in other folders)
